--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Izzy Sempill Art - Contact Page">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="canonical" href="https://izzysempill.com/contact" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="../assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="/assets/js/main-3b0dd11b.js"></script>
     <title>Izzy Sempill - Contact</title>
