--- a/mywork.html
+++ b/mywork.html
@@ -4,16 +4,17 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Izzy Sempill Art - My Work">
+	<meta name="description" content="Izzy Sempill Art - Teaching has provided me with a broad range of creative skills and the opportunity to keep trying new techniques, always learning as I go.">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="canonical" href="https://izzysempill.com/mywork" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-3b0dd11b.js"></script>
-    <title>Izzy Sempill - My Work</title>
+    <script src="assets/js/main-3b0dd11b.js" defer></script>
+    <title>Izzy Sempill - My Work - Some pieces that I have enjoyed making in recent years</title>
 
     <style>
 
@@ -121,27 +122,27 @@
             <div class="main-content-header parallax-scroll-off">
                 <div class="bg-image"></div>
                 <div class="main-content-title">
-                    <span>My Work</span>
+                    <h1 class="m0">My Work</h1>
                 </div>
             </div>
 
 			<!-- Page Subheading -->
             <div class="main-content-subheading">
-                <span class="text-block-subheading">Example of My Work</span>
+                <h2 class="text-block-subheading">Example of My Work</h2>
             </div>
 
             <!-- Page Body -->
             <div class="main-content-body">
 
 				<!-- Top Message -->
-				<div class="content-element text-block mobile-align-left" style="text-align: center;">
+				<section class="content-element text-block mobile-align-left" style="text-align: center;">
 					<p class="text-block-content">My Print Shop includes some of my edited and refined work, but art should also be about the process! Teaching has provided me with a broad range of creative skills and the opportunity to keep trying new techniques, always learning as I go. Below are some pieces, not for sale, that I have enjoyed making in recent years. I also include examples of work in progress on my Updates page.</p>
-				</div>
+				</section>
 
 				<div class="divider"></div>
 
 				<!-- Image Grid (Non-Mobile) -->
-                <div class="image-grid-layout">
+                <section class="image-grid-layout">
                     <div class="grid-item"><img src="assets/images/examples/example-work-1.png"></div>
                     <div class="grid-item"><img src="assets/images/examples/example-work-2.png"></div>
                     <div class="grid-item"><img src="assets/images/examples/example-work-3.png"></div>
@@ -157,7 +158,7 @@
                     <div class="grid-item"><img src="assets/images/examples/example-work-13.png"></div>
                     <div class="grid-item"><img src="assets/images/examples/example-work-14.png"></div>
                     <div class="grid-item"><img src="assets/images/examples/example-work-15.jpg"></div>
-                </div>
+                </section>
 
 			</div>
 
