--- a/printshop.html
+++ b/printshop.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Izzy Sempill Art - Print Shop">
+	<meta name="description" content="A3 and A4 prints of collages, life drawings, and mixed media peices. All on high quality inkjet print on 230gsm Pinnacle matte paper and with Free UK delivery.">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="canonical" href="https://izzysempill.com/printshop" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-3b0dd11b.js"></script>
-    <title>Izzy Sempill - Print Shop</title>
+    <script src="assets/js/main-3b0dd11b.js" defer></script>
+    <title>Izzy Sempill - Print Shop - Purchase A3 and A4 prints of collages, life drawings, and mixed media peices</title>
 
     <style>
 
