--- a/updates.html
+++ b/updates.html
@@ -4,16 +4,17 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Izzy Sempill Art - Work Updates">
+	<meta name="description" content="Izzy Sempill Art - Updates on exhibitions, projects and work in progress">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
+	<link rel="canonical" href="https://izzysempill.com/mywork" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-3b0dd11b.js"></script>
-    <title>Izzy Sempill - Updates</title>
+    <script src="assets/js/main-3b0dd11b.js" defer></script>
+    <title>Izzy Sempill - Updates on exhibitions, projects and work in progress</title>
 
     <style>
 
@@ -21,6 +22,18 @@
             background-image: url(assets/images/headers/cover-updates.jpg);
             background-position-y: bottom;
         }
+
+		.content-element .text-block {
+			padding-top: 24px
+		}
+
+		.image-hscroller {
+			padding-bottom: 28px;
+		}
+
+		.image-grid-layout {
+			padding-bottom: 28px;
+		}
 
         .recent-work-image-grid {
             display: grid;
@@ -172,19 +185,19 @@
             <div class="main-content-header parallax-scroll-off">
                 <div class="bg-image"></div>
                 <div class="main-content-title">
-                    <span>Updates</span>
+                    <h1 class="m0">Updates</h1>
                 </div>
             </div>
 
             <!-- Page Subheading -->
             <div class="main-content-subheading">
-                <span class="text-block-subheading">Exhibitions, projects, work in progress</span>
+                <h2 class="text-block-subheading">Exhibitions, projects, work in progress</h2>
             </div>
 
             <div class="main-content-body">
 
 				<!-- National Festival of Making - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -193,7 +206,7 @@
 					<div class="content">
 
 						<!-- National Festival of Making -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">Blackburn</p>     
 							<p class="text-block-subheading">5 & 6 July 2025</p>          
 
@@ -206,7 +219,7 @@
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/festival-of-making/nfom_1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/festival-of-making/nfom_2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/festival-of-making/nfom_3.jpg"></div>
@@ -216,7 +229,7 @@
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/festival-of-making/nfom_1.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/festival-of-making/nfom_2.jpg"></div>
@@ -234,12 +247,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Handmade Productions - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -248,7 +261,7 @@
 					<div class="content">
 
 						<!-- Handmade Productions -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">Hebden Bridge Summer Parade</p>     
 							<p class="text-block-subheading">June 2025</p>          
 
@@ -258,7 +271,7 @@
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/handmade-productions/handmade_3.jpg"></div>
@@ -268,7 +281,7 @@
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_1.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/handmade-productions/handmade_2.jpg"></div>
@@ -281,12 +294,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Work in progress - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -295,8 +308,8 @@
 					<div class="content">
 
 						<!-- Coming Soon (Risograph) -->
-						<div class="content-element text-block" style="padding-top:24px">
-							<p class="text-block-subheading" style="margin-top: 0;">Coming soon</p>                   
+						<div class="content-element text-block">
+							<p class="text-block-subheading mt-0">Coming soon</p>                   
 							<p class="text-block-content">Recently I’ve been making monoprints, experimenting with organic shapes and mark-making to create a variety of textures (left image - black and white).</p>
 							<p class="text-block-content">I wanted to push this idea further, so I digitised my work and printed copies using the Risograph process - a Japanese photocopying and printing method that came about in the 1980s and is still popular with designers today. Riso is known for its vibrant colours, limited palette and charming imperfections.</p>
 							<p class="text-block-content">I’ve been playing with compositions - layering the shapes I monoprinted and Riso printing them in different colours (second and third images). It’s been an experimental process because you’re never quite sure how Riso prints will turn out, but I’m pleased with the results!</p>
@@ -304,14 +317,14 @@
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/risograph/ris_3.jpg"></div>
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/risograph/ris_1.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/risograph/ris_2.jpg"></div>
@@ -321,12 +334,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Fine Art - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -335,7 +348,7 @@
 					<div class="content">
 
 						<!-- Fine Art -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">University of Salford</p>     
 							<p class="text-block-subheading">March 2025</p>                        
 							<p class="text-block-content">Participants were invited to bring their unwanted art (e.g. testers, or a piece they'd previously given up on) and rework it into something new. I offered up some of my old work as well. The aim was to create a relaxed atmosphere where they could forget the isolation and 'pressure to produce' we can feel when making art, studying at uni, and more generally in our day to day lives.</p>
@@ -343,7 +356,7 @@
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/fine-art/fa_3.jpg"></div>
@@ -353,7 +366,7 @@
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_1.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/fine-art/fa_2.jpg"></div>
@@ -368,12 +381,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Texture paste on wood boards - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -382,20 +395,20 @@
 					<div class="content">
 
 						<!-- Work in progress -->
-						<div class="content-element text-block" style="padding-top:24px">
-							<p class="text-block-subheading" style="margin-top: 0;">Work in progress</p>                      
+						<div class="content-element text-block">
+							<p class="text-block-subheading  mt-0">Work in progress</p>                      
 							<p class="text-block-content">I started experimenting with texture paste last year. More recently, I have been using it with watercolour on wood boards. These materials allow me to create a sense of movement and energy - particularly with the blue tones, which are reminiscent of crashing waves. I'm really enjoying the process and will continue to develop this series.</p>
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/coming-soon/soon_3.jpg"></div>
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_2.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/coming-soon/soon_1.jpg"></div>
@@ -405,12 +418,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
 				<div class="divider"></div>
 
 				<!-- Platform One Gallery - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -419,21 +432,21 @@
 					<div class="content">
 
 						<!-- Into the Light Intro -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">Platform One Gallery, Todmorden</p>     
 							<p class="text-block-subheading">March - April 2025</p>                        
 							<p class="text-block-content">Three of my texture paste pieces have been included in Platform One Gallery's open exhibition, Into the Light, which welcomes and celebrates the Spring. The pink/orange piece is inspired by sunset skies, and the two landscapes aim to capture the ever-changing light in the beautiful Calder Valley.</p>
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/platform-one/p1.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/platform-one/p2.jpg"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/platform-one/p3.jpg"></div>
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p1.jpg"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/platform-one/p2.jpg"></div>
@@ -445,12 +458,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Blackburn Museum - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -459,21 +472,21 @@
 					<div class="content">
 
 						<!-- Blackburn Open Exhibition Intro -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">Blackburn Museum & Art Gallery</p>     
 							<p class="text-block-subheading">Jan - March 2025</p>                        
 							<p class="text-block-content">My acrylic painting of my Nan's living room was included in the BM&AG 2025 Open Exhibition. This piece is special to me because her house has been such a stable and consistent place throughout my life, but I also think it's a familiar and comforting scene that many people can recognise or identify with in their own ways.</p>
 						</div>
 
 						<!-- Additional Images (Default Screens) -->
-						<div class="content-element image-grid-layout non-mobile" style="padding-bottom: 28px;">
+						<div class="content-element image-grid-layout non-mobile">
 							<div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_2.png"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
 							<div class="grid-item"><img src="assets/images/exhibitions/blackburn/blackburn_3.png"></div>
 						</div>
 
 						<!-- Additional Images (Mobile) -->
-						<div class="image-hscroller mobile-only" style="padding-bottom: 28px;">
+						<div class="image-hscroller mobile-only">
 							<div class="scroll-wrapper">
 								<div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_2.png"></div>
 								<div class="hscroller-item"><img src="assets/images/exhibitions/blackburn/blackburn_1.png"></div>
@@ -484,12 +497,12 @@
 
 					</div>
 
-				</div>
+				</section>
 
                 <div class="divider"></div>
 
 				<!-- Water Street Gallery - Accordian -->
-				<div class="accordian">
+				<section class="accordian">
 
 					<div class="header">
 						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
@@ -498,7 +511,7 @@
 					<div class="content">
 
 						<!-- Postcard Art Intro -->
-						<div class="content-element text-block" style="padding-top:24px">
+						<div class="content-element text-block">
 							<p class="text-block-subheading">Water Street Gallery, Todmorden</p>     
 							<p class="text-block-subheading">Nov 2024 - Jan 2025</p>                        
 							<p class="text-block-content">I created two emulsion transfers of wintery scenes for the Postcard Art call-out at Water Street Gallery. These were displayed alongside larger pieces from the Seeds of Change exhibition.</p>
@@ -525,7 +538,7 @@
 
 					</div>
 
-				</div>
+				</section>
 
             </div>
 
