--- a/cart.html
+++ b/cart.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Izzy Sempill Art - Cart">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://izzysempill.com/cart" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="../assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="/assets/js/main-3b0dd11b.js"></script>
     <script src="https://js.stripe.com/v3"></script>
