--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Izzy Sempill Art - About My Work">
+	<meta name="description" content="Izzy Sempill Art - When I make art, it provides me with a sense of calm and helps me feel grounded. When I teach, I support young artists to pursue their interests and reach their potential.">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <meta name="google-site-verification" content="bAgGI0zOaE-6t0b2yMcEQFUnFBnSa1tNi17mCBTg7nU" />
+	<link rel="canonical" href="https://izzysempill.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2b73ac9e.css" />
+    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-3b0dd11b.js"></script>
-    <title>Izzy Sempill - About</title>
+    <script src="assets/js/main-3b0dd11b.js" defer></script>
+    <title>Izzy Sempill- Artist, teacher and community practitioner based in West Yorkshire</title>
 
     <style>
 
@@ -74,6 +75,24 @@
         a.button-link:hover {
             opacity: 1;
         }
+
+		.image-wrapper.right  {
+			float: right;
+			margin: 20px 20px 0 20px;
+		}
+
+		.image-wrapper.left  {
+			float: left;
+			margin: 20px 20px 20px 0;
+		}
+
+		.image-wrapper img {
+			height: 400px;
+		}
+
+		.text-block-content a {
+			color: inherit;
+		}
 
     </style>
 
@@ -171,58 +190,59 @@
         <!-- Main Content -->
         <div id="main-content" class="home-page">
             
-            <div class="main-content-header parallax-scroll-off">
+            <section class="main-content-header parallax-scroll-off">
                 <div class="bg-image"></div>
                 <div class="main-content-title">
-                    <span>About</span>
+                    <h1 class="m0">About</h1>
                 </div>
-            </div>
+            </section>
 
             <!-- Page Subheading -->
-            <div class="main-content-subheading">
+            <section class="main-content-subheading">
                 <p class="text-block-subheading logo-font">Hi, I'm Izzy</p>
-                <p class="text-block-subheading">I’m an artist, teacher and community practitioner based in West Yorkshire.</p>
-            </div>
+                <h2 class="text-block-subheading">I’m an artist, teacher and community practitioner based in West Yorkshire.</h2>
+            </section>
 
             <div class="main-content-body">
 
 				<!-- Top Message -->
-				<div class="content-element text-block mobile-align-left" style="text-align: center;">
+				<section class="content-element text-block mobile-align-left text-align-center">
 					<p class="text-block-content">In all my work, I want to ensure the experience is meaningful. When I make art, it provides me with a sense of calm and helps me feel grounded. When I teach, I support young artists to pursue their interests and reach their potential. When I work with communities, I provide a safe space where people can relax, connect and express themselves creatively.</p>
-				</div>
+				</section>
 
-				<div class="divider"></div>
+				<div class="divider d-flex"></div>
 
-                <div class="content-element text-block">
-                    <p class="text-block-subheading">Artist</p>
-                    <p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. My <a href="/printshop" style="color: inherit;">Print Shop</a> demonstrates my go-to style, featuring organic shapes and negative space, but I rarely have an end-product in mind as I work. Examples of other pieces I’ve enjoyed making can be found in the <a href="/mywork" style="color: inherit;">My Work</a> section, showing my broader range.</p>
-                </div>
-               
-                <div class="divider"></div>
+				<!-- Artist -->
+				<section class="content-element text-block">
+					<h3 class="text-block-subheading">Artist</h3>
+					<p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. My <a href="/printshop">Print Shop</a> demonstrates my go-to style, featuring organic shapes and negative space, but I rarely have an end-product in mind as I work. Examples of other pieces I’ve enjoyed making can be found in the <a href="/mywork">My Work</a> section, showing my broader range.</p>
+				</section>
+			
+				<div class="divider d-flex"></div>
 
-                <!-- More Text -->
-                <div class="content-element text-block">
-                    <p class="text-block-subheading">Art teacher</p>
-                    <p class="text-block-content">I have loads of experience with schools and young people. I worked in various pastoral roles with secondary and post-16 students before training to become an art teacher, and currently teach at a college. I'm an advocate for arts education and providing access to creative and cultural opportunities.</p>
-                </div>
+				<!-- Art teacher -->
+				<section class="content-element text-block">
+					<h3 class="text-block-subheading">Art teacher</h3>
+					<p class="text-block-content">I have loads of experience with schools and young people. I worked in various pastoral roles with secondary and post-16 students before training to become an art teacher, and currently teach at a college. I'm an advocate for arts education and providing access to creative and cultural opportunities.</p>
+				</section>
 
-                <div class="divider"></div>
+				<div class="divider d-flex"></div>
 
-                <!-- More Text -->
-                <div class="content-element text-block">
-                    <p class="text-block-subheading">Community practitioner</p>
-                    <p class="text-block-content">I'm currently studying an MA in Socially Engaged Arts Practice at the University of Salford and actively engaging with local communities through art. This is something I've always wanted to do, so gaining the experience has been exciting and rewarding. You can find out about the projects I’ve been involved with and sessions I’ve facilitated on the <a href="/updates" style="color: inherit;">Updates</a> page. If you are interested in collaborating, <a href="/contact" style="color: inherit;">please get in touch!</a></p>
-                </div>
+                <!-- Community practitioner -->
+                <section class="content-element text-block">
+                    <h3 class="text-block-subheading">Community practitioner</h3>
+                    <p class="text-block-content">I'm currently studying an MA in Socially Engaged Arts Practice at the University of Salford and actively engaging with local communities through art. This is something I've always wanted to do, so gaining the experience has been exciting and rewarding. You can find out about the projects I’ve been involved with and sessions I’ve facilitated on the <a href="/updates">Updates</a> page. If you are interested in collaborating, <a href="/contact">please get in touch!</a></p>
+                </section>
 
-                <div class="divider"></div>
+                <div class="divider d-flex"></div>
 
                 <!-- Qualifications -->
-                <div class="content-element text-block">
-                    <p class="text-block-subheading">Qualifications</p>
+                <section class="content-element text-block">
+                    <h3 class="text-block-subheading">Qualifications</h3>
                     <p class="text-block-content">BA History of Art & Design - University of Brighton</p>
                     <p class="text-block-content">PGCE Secondary Art & Design (QTS + ECT) - Manchester Metropolitan University</p>
                     <p class="text-block-content">Currently studying MA Socially Engaged Arts Practice - University of Salford</p>
-                </div>
+                </section>
 
             </div>
 
