--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Izzy Sempill Art - When I make art, it provides me with a sense of calm and helps me feel grounded. When I teach, I support young artists to pursue their interests and reach their potential.">
+	<meta name="description" content="Izzy Sempill - I’m an artist, teacher and community practitioner based in West Yorkshire. In all my art, I want to ensure the experience is meaningful">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <meta name="google-site-verification" content="bAgGI0zOaE-6t0b2yMcEQFUnFBnSa1tNi17mCBTg7nU" />
 	<link rel="canonical" href="https://izzysempill.com/" />
@@ -11,10 +11,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
+    <link rel="stylesheet" href="assets/css/main-6125fd82.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-3b0dd11b.js" defer></script>
-    <title>Izzy Sempill- Artist, teacher and community practitioner based in West Yorkshire</title>
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org/",
+			"@type": "Person",
+			"name": "Izzy Sempill",
+			"alternateName": "Isabel Sempill",
+			"familyName" : "Sempill",
+			"jobTitle": "Artist",
+			"description": "Artist, teacher and community practitioner based in West Yorkshire",
+			"url": "https://izzysempill.com/"
+		}
+	</script>
+
+    <title>Izzy Sempill - Artist, teacher and community practitioner</title>
 
     <style>
 
@@ -260,7 +273,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
+            <span class="d-block mt-20">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
