--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main-2a1176ac.css" />
+    <link rel="stylesheet" href="../assets/css/main-6125fd82.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="/assets/js/main-3b0dd11b.js"></script>
     <title>Izzy Sempill - Contact</title>
@@ -93,7 +93,7 @@
   gtag('config', 'G-N0HJ9SJ581');
 </script>
 
-<body style="overflow-x: none;">
+<body>
     
     <!-- Side Bar -->
     <div id="sidebar-shield">
@@ -227,7 +227,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
+            <span class="d-block mt-20">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
