--- a/mywork.html
+++ b/mywork.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
+    <link rel="stylesheet" href="assets/css/main-6125fd82.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-3b0dd11b.js" defer></script>
     <title>Izzy Sempill - My Work - Some pieces that I have enjoyed making in recent years</title>
@@ -135,7 +135,7 @@
             <div class="main-content-body">
 
 				<!-- Top Message -->
-				<section class="content-element text-block mobile-align-left" style="text-align: center;">
+				<section class="content-element text-block mobile-align-left text-align-center">
 					<p class="text-block-content">My Print Shop includes some of my edited and refined work, but art should also be about the process! Teaching has provided me with a broad range of creative skills and the opportunity to keep trying new techniques, always learning as I go. Below are some pieces, not for sale, that I have enjoyed making in recent years. I also include examples of work in progress on my Updates page.</p>
 				</section>
 
@@ -176,7 +176,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
+            <span class="d-block mt-20">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
