--- a/printshop.html
+++ b/printshop.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-2a1176ac.css" />
+    <link rel="stylesheet" href="assets/css/main-6125fd82.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-3b0dd11b.js" defer></script>
     <title>Izzy Sempill - Print Shop - Purchase A3 and A4 prints of collages, life drawings, and mixed media peices</title>
@@ -571,7 +571,7 @@
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
-            <span style="display: block; margin-top: 20px;">&copy; 2025 Izzy Sempill</span>
+            <span class="d-block mt-20">&copy; 2025 Izzy Sempill</span>
         </div>
 
     </div>
