--- a/cart.html
+++ b/cart.html
@@ -197,7 +197,7 @@
 
         <div class="sidebar-header">
             <span class="close-icon" onclick="closeSidebar()">
-                <img src="/assets/icons/close.svg" height="24">
+                <img src="/assets/icons/close.svg" height="24" alt="A close icon">
             </span>
             <span class="logo logo-font">
                 Izzy Sempill
@@ -256,7 +256,7 @@
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
             <span class="burger-menu" onclick="openSidebar()">
-                <img src="/assets/icons/burger-menu.svg" height="24">
+                <img src="/assets/icons/burger-menu.svg" height="24" alt="A burger menu - 3 horizontal lines on top of one another">
             </span>
             <span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
@@ -329,7 +329,7 @@
                         </div>
                         <button class="checkout-button" onclick="secureCheckout(this)">
                             <span class="default">Secure Checkout</span>
-                            <span class="loading"><img src="/assets/icons/loading.svg"></span>
+                            <span class="loading"><img src="/assets/icons/loading.svg" alt="Loading spinner - Checout is being processed"></span>
                         </button>
 
                     </div>
