--- a/product/lemons.html
+++ b/product/lemons.html
@@ -220,7 +220,7 @@
 
         <div class="sidebar-header">
             <span class="close-icon" onclick="closeSidebar()">
-                <img src="/assets/icons/close.svg" height="24">
+                <img src="/assets/icons/close.svg" height="24" alt="A close icon">
             </span>
             <span class="logo logo-font">
                 Izzy Sempill
@@ -279,7 +279,7 @@
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
             <span class="burger-menu" onclick="openSidebar()">
-                <img src="/assets/icons/burger-menu.svg" height="24">
+                <img src="/assets/icons/burger-menu.svg" height="24" alt="A burger menu - 3 horizontal lines on top of one another">
             </span>
             <span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
@@ -385,7 +385,7 @@
 							</select>
                             <button class="add" onclick="addToCart(this)">
                                 <span class="add">Add to cart</span>
-                                <span class="adding"><img src="/assets/icons/loading.svg"></span>
+                                <span class="adding"><img src="/assets/icons/loading.svg" alt="Loading spinner - A product is being added to the cart"></span>
                             </button>
                             <button class="view" onclick="window.location='/cart'">View cart</button>
                         </div>
