--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <li><a href="/updates">Updates</a></li>
                 <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
-                <li><a href="/cart"> <img src="/assets/icons/cart.svg"></a></li>
+                <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
         </div>
 
@@ -212,7 +212,7 @@
 
             <!-- Page Subheading -->
             <section class="main-content-subheading">
-                <p class="text-block-subheading logo-font">Hi, I'm Izzy</p>
+                <h2 class="text-block-subheading logo-font">Hi, I'm Izzy</h2>
                 <h2 class="text-block-subheading">I’m an artist, teacher and community practitioner based in West Yorkshire.</h2>
             </section>
 
