--- a/printshop.html
+++ b/printshop.html
@@ -133,7 +133,7 @@
                 <li><a href="/updates">Updates</a></li>
                 <li><a href="/mywork">My Work</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
-                <li><a href="/cart"> <img src="/assets/icons/cart.svg"></a></li>
+                <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
         </div>
 
