--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Izzy Sempill - I’m an artist, teacher and community practitioner based in West Yorkshire. In all my art, I want to ensure the experience is meaningful">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <meta name="google-site-verification" content="bAgGI0zOaE-6t0b2yMcEQFUnFBnSa1tNi17mCBTg7nU" />
-	<link rel="canonical" href="https://izzysempill.com/" />
+	
+	<link rel="canonical"  href="https://izzysempill.com/"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-6125fd82.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap">
+    <link rel="stylesheet" href="assets/css/main-6125fd82.css"/>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+
     <script src="assets/js/main-3b0dd11b.js" defer></script>
 	<script type="application/ld+json">
 		{
