Open Graph Tags

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:site_name" content="Izzy Sempill Art">
+	<meta property="og:title" content="Izzy Sempill - Artist, teacher and community practitioner">
 	<meta name="description" content="Izzy Sempill - I’m an artist, teacher and community practitioner based in West Yorkshire. In all my art, I want to ensure the experience is meaningful">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
     <meta name="google-site-verification" content="bAgGI0zOaE-6t0b2yMcEQFUnFBnSa1tNi17mCBTg7nU" />
-	
 	<link rel="canonical"  href="https://izzysempill.com/"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
